--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nav-bar {
+    background: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+    height: 100vh;
+}
+
+.chat-container {
+    padding: 20px 20px 0px 20px;
+}
+
+.messages-container {
+    background: #fff;
+    height: 100%;
+    padding: 20px;
+}
+
+.type-container {
+    padding: 20px;
+}
+
+.my-message {
+    background-color: cyan;
+}
+
+.not-my-message {
+    background-color: yellow;
 }
