--- a/read-before-it-explodes-client/src/components/chat.css
+++ b/read-before-it-explodes-client/src/components/chat.css
@@ -1,5 +1,5 @@
 .fade-out {
-  transition: transform 0.5s;
+  transition: transform 0.2s;
   -ms-transform: scale(0); /* IE 9 */
   -webkit-transform: scale(0); /* Safari 3-8 */
   transform: scale(0); 
@@ -15,9 +15,19 @@
   padding: 20px;
 }
 
-.type-container {
-  padding: 20px;
+.footer-content {
+  padding: 20px !important;
 }
+
+.select-time, .select-time > div {
+  height: 100% !important;
+  width: 100% !important;
+}
+
+.select-time > div > span {
+  align-self: center;
+}
+
 
 /* CSS talk bubble */
 .talk-bubble {
